# lv_port_pc_vscode

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Charger_PreDefine.h  Makefile  README.md  build.sh  lv_conf.defaults  lv_conf.h  lv_demo_conf.h  lv_drv_conf.h  lv_ex_conf.h  manifest.json  pages_mngr.c  pages_mngr.h  simulator.code-workspace  ui_visible_obj_info.json  ui_visible_tree.json
CMake/: FindSDL2.cmake  FindSDL2TTF.cmake
UI/: CMakeLists.txt  filelist.txt  ui.c  ui.cpp  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
UI/components/: ui_comp_hook.c
UI/screens/: ui_Screen1.c
assets/: help.json  lanugage.json
assets/fragment/: fragment_00001_btn_text.json  fragment_00002_btn_language.json  fragment_00003_btn_primary.json  fragment_00004_connector_quad_card.json  fragment_00005_connector_no.json  fragment_00006_charging_processing.json  fragment_00007_charging_error.json  fragment_00008_home_info_card.json  fragment_00011_idle_info_card.json  fragment_00014_starting1_info_card.json  fragment_00017_starting2_info_card.json  fragment_00020_charging_info_card.json  fragment_00022_charging_detailed_data.json  fragment_00024_finished_info_card.json  fragment_00027_reserved_info_card.json  fragment_00030_session_error_info_card.json  fragment_00032_session_error_circle.json  fragment_00033_session_error_continue.json  fragment_00035_start_error_info_card.json  fragment_00037_start_error_circle.json  fragment_00038_start_error_continue.json  fragment_00040_fault_info_card.json  fragment_00043_unavailable_info_card.json  fragment_00053_help1_status.json  fragment_00055_help2_close_button.json  fragment_00056_help2_back_button.json  fragment_00057_connection_failed_circle.json  fragment_00058_connection_failed_status_bar.json  fragment_00059_connection_failed_close_button.json  fragment_00060_bill_status_bar.json  fragment_00061_bill_close_button.json  fragment_00062_pre_authorization_shortcut1_button.json  fragment_00063_pre_authorization_shortcut2_button.json  fragment_00064_pre_authorization_shortcut3_button.json  fragment_00065_pre_authorization_close_button.json  fragment_00066_pre_authorization_num_button.json  fragment_00067_pre_authorization_num2_button.json  fragment_00067_pre_authorization_num_button_delete.json  fragment_00068_pre_authorization_num3_button.json  fragment_00069_pre_authorization_num4_button.json  (+62 more)
assets/i18n/: de-DE.json  en-US.json  es-ES.json  fi-FI.json  fr-FR.json  it-IT.json  nl-NL.json  pt-PT.json  ru-RU.json
assets/images/: 0mk.py  output.json
assets/layout/: layout_000_welcome.json  layout_001_popup_help1.json  layout_002_popup_help2.json  layout_004_popup_bill.json  layout_005_popup_pre_authorization.json  layout_006_popup_language.json  layout_007_popup_detailed_data.json  layout_010_main.json  layout_011_main_single.json  layout_020_status_bar.json  layout_021_connector_quad.json  layout_022_connector_dual.json  layout_023_connector_trip.json  layout_031_page_home.json  layout_032_page_idle.json  layout_033_page_starting1.json  layout_034_page_starting2.json  layout_035_page_charging.json  layout_036_page_finished.json  layout_037_page_reserved.json  layout_038_page_session_error_full.json  layout_039_page_start_error_full.json  layout_040_page_fault_full.json  layout_041_page_unavailable_full.json  layout_042_page_connecting_full.json  layout_044_page_stopping_full.json  layout_045_page_wait_in_line_full.json  layout_046_page_suspend_full.json  layout_047_conn_top_info.json  layout_048_page_processing_full.json  layout_049_popup_common.json  layout_050_page_home_full.json  layout_051_page_idel_full.json  layout_052_page_starting1_full.json  layout_053_page_starting2_full.json  layout_054_page_charging_full.json  layout_060_customer_info.json  layout_061_customer_info_charging.json  layout_062_price_charging.json  layout_063_price_idle.json  (+4 more)
assets/style/: style-000-default.json
assets/theme/: theme-000-main-light.json  theme-001-main-dark.json  theme-100-main-light-abacus.json
config/: FreeRTOSConfig.h
i18n/: lv_i18n.c  lv_i18n.h
ioc/: autoGroup.c  ioc_app.c  ioc_app.h
ioc/mngr/: cJSON.c  cJSON.h  ioc_cjson.c  ioc_cjson.h  ioc_fragment_mngr.c  ioc_fragment_mngr.h  ioc_layout_mngr.c  ioc_layout_mngr.h  ioc_obj.c  ioc_obj.h  ioc_string_2_enum.c  ioc_string_2_enum.h  ioc_style_mngr.c  ioc_style_mngr.h  ioc_theme_mngr.c  ioc_theme_mngr.h
ioc/mqtt/: ioc_mqtt.c  ioc_mqtt.h  mosquitto.h
ioc/uijson/: const_name.c  const_name.h  ui_json.c  ui_json.h
ioc/zlog/: Charger_DrvPoint_DEBUG.c  Charger_ErrCode.h
main/img/: img_alert.c  img_backgroud.c  img_bg1.c  img_bg1_small.c  img_bg2.c  img_bg2_small.c  img_bg3.c  img_bg3_small.c  img_bg4.c  img_bg4_small.c  img_bg5.c  img_bg5_small.c  img_bg6.c  img_bg6_small.c  img_bg7.c  img_bg7_small.c  img_chosen.c  img_guide_back.c  img_imgbtn_cancle_15x15.c  img_imgbtn_ok_12x9.c  img_keypad_222222_a.c  img_keypad_222222_b.c  img_keypad_222222_c.c  img_keypad_222222_d.c  img_keypad_222222_e.c  img_keypad_222222_f.c  (+105 more)
pages/: ui_customer_info.c  ui_customer_info.h  ui_customer_info_charging.c  ui_customer_info_charging.h  ui_page_01_home.c  ui_page_01_home.h  ui_page_02_idle.c  ui_page_02_idle.h  ui_page_03_starting1.c  ui_page_03_starting1.h  ui_page_04_starting2.c  ui_page_04_starting2.h  ui_page_05_charging.c  ui_page_05_charging.h  ui_page_06_finished.c  ui_page_06_finished.h  ui_page_07_reserved.c  ui_page_07_reserved.h  ui_page_08_session_error.c  ui_page_08_session_error.h  ui_page_09_start_error.c  ui_page_09_start_error.h  ui_page_10_fault.c  ui_page_10_fault.h  ui_page_11_unavailable.c  ui_page_11_unavailable.h  ui_page_12_connecting.c  ui_page_12_connecting.h  ui_page_14_stopping.c  ui_page_14_stopping.h  ui_page_15_wait_in_line.c  ui_page_15_wait_in_line.h  ui_page_16_suspend.c  ui_page_16_suspend.h  ui_page_17_processing.c  ui_page_17_processing.h  ui_page_connector_group.c  ui_page_connector_group.h  ui_page_main.c  ui_page_main.h  (+28 more)
src/: feedback.c  feedback.h  feedback_logic.c  feedback_logic.h  freertos_main.c  main.c
tests/: feedback_logic_test.c  feedback_ui_test.c
(+130 files in other folders)
